# production-demo

./: .gitignore  DataScienceConference_BS.pptx  Makefile  README.md  launch  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: docker-image.yml  makefile.yml  python-package.yml
configuration/: Dockerfile  Dockerfile.gocd-agent
doc/: conf.py  evaluate.rst  index.rst  test.rst  train.rst
docs/: .buildinfo  evaluate.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  service.html  test.html  train.html
docs/_modules/: index.html  test_eval.html  test_hasher.html  test_local_endpoint.html  test_train.html
docs/_sources/: index.rst.txt  train.rst.txt
docs/docs/: .buildinfo  evaluate.html  genindex.html  index.html  objects.inv  search.html  test.html  train.html
docs/doctrees/: environment.pickle  evaluate.doctree  index.doctree  service.doctree  test.doctree  train.doctree
docs/modules/: production_demo.evaluate.handler.html  production_demo.evaluate.html  production_demo.service.InferenceHandler.html  production_demo.service.html  production_demo.service.main.html  production_demo.service.start_server.html  production_demo.train.CategoriesTransformer.hash_col.html  production_demo.train.CategoriesTransformer.html  production_demo.train.CategoriesTransformer.transform.html  production_demo.train.handler.html  production_demo.train.html  test_eval.test_eval_handler.html  test_hasher.test_hasher.html  test_local_endpoint.test_endpoint.html  test_train.test_train_handler.html
eval/: results.csv
notebooks/: house-prices-regression-tuning.ipynb  house-prices-regression-tuning.md  house-prices-regression.ipynb
pipeline/: build-test.gocd.yaml  build.gocd.yaml  deploy.gocd.yaml  integration-test.gocd.yaml  packaging.gocd.yaml  train-eval.gocd.yaml
src/production_demo/: __init__.py  constants.py  evaluate.py  handler_service.py  model_server.py  (+3 more)
test/: test_eval.py  test_handler.py  test_hasher.py  test_service.py  test_train.py
test_integ/: test_local_endpoint.py
(+49 files in other folders)
