#
# INSTALL USING setuptools
#
# For a detailed guide, visit the setuptools documentation
# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
#

[metadata]
name = production_demo
version = 0.0.1

[options]
packages = find:
package_dir = 
    =src
install_requires = 
    tensorflow == 2.7.0
    tensorflow_decision_forests == 0.2.3
    pandas == 1.4.0
    numpy == 1.22.3
