#
# INSTALL USING setuptools
#
# For a detailed guide, visit the setuptools documentation
# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
#

[metadata]
name = production_demo
version = 0.0.1

[options]
packages = find:
package_dir = 
    =src
install_requires = 
    scikit-learn == 1.0.2
    lightgbm == 3.3.2
    pandas == 1.4.0
    numpy == 1.22.3
    matplotlib == 3.5.1
