#
# INSTALL USING setuptools
#
# For a detailed guide, visit the setuptools documentation
# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
#

[metadata]
name = production_demo
version = 0.1

[options]
packages = find:
package_dir = 
    =src
install_requires = 
    scikit-learn == 1.0.2
    lightgbm == 3.3.2
    pandas == 1.4.0
    scipy == 1.7.3
    tabulate == 0.8.9
    Flask == 2.0.3
    gunicorn == 20.1.0
    numpy == 1.22.3; python_version > "3.6"

[options.packages.find]
where = src
exclude = test

[options.entry_points]
console_scripts =
    HouseTrain = production_demo.train:handler
    HouseEval = production_demo.evaluate:handler
    entrypoint = production_demo.service:main

[tool:pytest]
xfail_strict = true
testpaths = test

# Additional coverage.py settings. The parallel flag and source values are
# necessary so that pytest-cov knows to alias the brazil build artifact absolute
# paths to the relative ones from your package source.
[coverage:run]
branch = true
parallel = true

[coverage:paths]
source =
    src/
    build/lib/*/site-packages/

[coverage:html]
directory = build/coverage
